--- a/tienda/src/main/resources/application.properties
+++ b/tienda/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 server.port=8081
