--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  rabbitmq:
+    port: 5672
+    username: guest
+    password: guest
+    host: localhost
   datasource:
     url: jdbc:mysql://156.67.72.101:3306/u117615979_tienda
     driverClassName: com.mysql.cj.jdbc.Driver
