--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;MODE=LEGACY
+    url: jdbc:h2:mem:testdb;MODE=MYSQL
     driverClassName: org.h2.Driver
     username: sa
     password: password
