--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
     username: guest
     password: guest
     host: localhost
+    listener:
+      direct:
+        retry:
+          max-attempts: 3
+          enabled: true
   datasource:
     url: jdbc:mysql://156.67.72.101:3306/u117615979_tienda
     driverClassName: com.mysql.cj.jdbc.Driver
