--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,4 +1,14 @@
 spring:
+  rabbitmq:
+    port: 5672
+    username: guest
+    password: guest
+    host: localhost
+    listener:
+      direct:
+        retry:
+          max-attempts: 3
+          enabled: true
   datasource:
     url: jdbc:h2:mem:testdb;MODE=MYSQL
     driverClassName: org.h2.Driver
